examples/neg/case_insensitive_type_hint.effekt
module case_insensitive_type_hint

record MyType()

def fun(): Mytype = MyType()